[gd_scene load_steps=17 format=4 uid="uid://dbpauhvkkpfqw"]

[ext_resource type="Texture2D" uid="uid://jlgmakixmb3i" path="res://Assets/images/Palm Tree Island/Sprites/Terrain/Terrain (32x32).png" id="1_1i7xs"]
[ext_resource type="Script" uid="uid://dyufbugvyftbt" path="res://Script/background/palmera.gd" id="1_tw21w"]
[ext_resource type="Texture2D" uid="uid://bllb85ekf2xnn" path="res://Assets/images/Palm Tree Island/Sprites/Front Palm Trees/Front Palm Bottom and Grass (32x32).png" id="3_25xok"]
[ext_resource type="Texture2D" uid="uid://b2f3fmr1it61k" path="res://Assets/images/Palm Tree Island/Sprites/Front Palm Trees/Front Palm Tree Top 01.png" id="4_h88ag"]
[ext_resource type="Texture2D" uid="uid://be5t0hbpd7fev" path="res://Assets/images/Palm Tree Island/Sprites/Front Palm Trees/Front Palm Tree Top 02.png" id="5_peh3d"]
[ext_resource type="Texture2D" uid="uid://d1gcu4t2ma17e" path="res://Assets/images/Palm Tree Island/Sprites/Front Palm Trees/Front Palm Tree Top 03.png" id="6_xmqqh"]
[ext_resource type="Texture2D" uid="uid://dsw8plpaurxka" path="res://Assets/images/Palm Tree Island/Sprites/Front Palm Trees/Front Palm Tree Top 04.png" id="7_jrgc2"]
[ext_resource type="Texture2D" uid="uid://w6770mpmmbsi" path="res://Assets/images/Palm Tree Island/Sprites/Back Palm Trees/Back Palm Tree Regular 01.png" id="8_xmqqh"]
[ext_resource type="Texture2D" uid="uid://4i8ita8iwang" path="res://Assets/images/Palm Tree Island/Sprites/Back Palm Trees/Back Palm Tree Regular 02.png" id="9_jrgc2"]
[ext_resource type="Texture2D" uid="uid://46vr4faxmhaq" path="res://Assets/images/Palm Tree Island/Sprites/Back Palm Trees/Back Palm Tree Regular 03.png" id="10_06l3d"]
[ext_resource type="Texture2D" uid="uid://ddkanxpqj0sx3" path="res://Assets/images/Palm Tree Island/Sprites/Back Palm Trees/Back Palm Tree Regular 04.png" id="11_xme38"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u6bxr"]
texture = ExtResource("1_1i7xs")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
8:0/0 = 0
9:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
30:0/0 = 0
31:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
8:1/0 = 0
9:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
30:1/0 = 0
31:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
5:2/0 = 0
8:2/0 = 0
9:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
5:3/0 = 0
8:3/0 = 0
9:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
8:5/0 = 0
9:5/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
0:8/0 = 0
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:8/0 = 0
8:8/0 = 0
9:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
33:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
8:9/0 = 0
9:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
30:9/0 = 0
31:9/0 = 0
32:9/0 = 0
33:9/0 = 0

[sub_resource type="TileSet" id="TileSet_6vsw4"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_u6bxr")

[sub_resource type="TileSet" id="TileSet_1i7xs"]

[sub_resource type="SpriteFrames" id="SpriteFrames_06l3d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_h88ag")
}, {
"duration": 1.0,
"texture": ExtResource("5_peh3d")
}, {
"duration": 1.0,
"texture": ExtResource("6_xmqqh")
}, {
"duration": 1.0,
"texture": ExtResource("7_jrgc2")
}],
"loop": true,
"name": &"palma",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_e0fjb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_xmqqh")
}, {
"duration": 1.0,
"texture": ExtResource("9_jrgc2")
}, {
"duration": 1.0,
"texture": ExtResource("10_06l3d")
}, {
"duration": 1.0,
"texture": ExtResource("11_xme38")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_tw21w")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-358, 72)
scale = Vector2(2.5, 2.5)
tile_map_data = PackedByteArray("AABmABIAAAACAAIAAABmABMAAAACAAMAAABmABQAAAACAAIAAABmABUAAAACAAMAAABmABYAAAACAAIAAABmABcAAAACAAMAAABmABgAAAACAAIAAABmABkAAAACAAMAAABmABoAAAACAAIAAABnABIAAAACAAIAAABnABMAAAACAAMAAABnABQAAAACAAIAAABnABUAAAACAAMAAABnABYAAAACAAIAAABnABcAAAACAAMAAABnABgAAAACAAIAAABnABkAAAACAAMAAABnABoAAAACAAIAAAALABMAAAAPAAAAAAALABQAAAAPAAAAAAAMABMAAAAMAAAAAAAMABQAAAAMAAAAAAANABMAAAANAAAAAAANABQAAAANAAAAAAAOABMAAAAOAAAAAAAOABQAAAAOAAAAAAAPABMAAAAPAAAAAAAPABQAAAAPAAAAAAAQABMAAAAMAAAAAAAQABQAAAAMAAAAAAARABMAAAANAAAAAAARABQAAAANAAAAAAASABMAAAAOAAAAAAASABQAAAAOAAAAAAATABMAAAAPAAAAAAATABQAAAAPAAAAAAAUABMAAAAMAAAAAAAUABQAAAAMAAAAAAAVABMAAAANAAAAAAAVABQAAAANAAAAAAAWABMAAAAOAAAAAAAWABQAAAAOAAAAAAAXABMAAAAPAAAAAAAXABQAAAAPAAAAAAAYABMAAAAMAAAAAAAYABQAAAAMAAAAAAAZABMAAAANAAAAAAAZABQAAAANAAAAAAAaABMAAAAOAAAAAAAaABQAAAAOAAAAAAAbABMAAAAPAAAAAAAbABQAAAAPAAAAAAAcABMAAAAMAAAAAAAcABQAAAAMAAAAAAAdABMAAAANAAAAAAAdABQAAAANAAAAAAAeABMAAAAOAAAAAAAeABQAAAAOAAAAAAAfABMAAAAPAAAAAAAfABQAAAAPAAAAAAAgABMAAAAMAAAAAAAgABQAAAAMAAAAAAAhABMAAAANAAAAAAAhABQAAAANAAAAAAAiABMAAAAOAAAAAAAiABQAAAAOAAAAAAAjABMAAAAPAAAAAAAjABQAAAAPAAAAAAAkABMAAAAMAAAAAAAkABQAAAAMAAAAAAAlABMAAAANAAAAAAAlABQAAAANAAAAAAAmABMAAAAOAAAAAAAmABQAAAAOAAAAAAAnABMAAAAPAAAAAAAnABQAAAAPAAAAAAAoABMAAAAMAAAAAAAoABQAAAAMAAAAAAApABMAAAANAAAAAAApABQAAAANAAAAAAAqABMAAAAOAAAAAAAqABQAAAAOAAAAAAArABMAAAAPAAAAAAArABQAAAAPAAAAAAAEAA0AAAAEAAgAAAAEAA4AAAAOAAAAAAAEAA8AAAAOAAAAAAAEABAAAAAOAAAAAAAEABEAAAAOAAAAAAAEABIAAAAOAAAAAAAEABMAAAAOAAAAAAAEABQAAAAOAAAAAAAFAA0AAAABAAgAAAAFAA4AAAAPAAAAAAAFAA8AAAAPAAAAAAAFABAAAAAPAAAAAAAFABEAAAAPAAAAAAAFABIAAAAPAAAAAAAFABMAAAAPAAAAAAAFABQAAAAPAAAAAAAGAA0AAAACAAgAAAAGAA4AAAANAAAAAAAGAA8AAAAOAAAAAAAGABAAAAAOAAAAAAAGABEAAAAOAAAAAAAGABIAAAAOAAAAAAAGABMAAAAOAAAAAAAGABQAAAAOAAAAAAAHAA0AAAADAAgAAAAHAA4AAAAOAAAAAAAHAA8AAAAPAAAAAAAHABAAAAAPAAAAAAAHABEAAAAPAAAAAAAHABIAAAAPAAAAAAAHABMAAAAPAAAAAAAHABQAAAAPAAAAAAAIAA0AAAAEAAgAAAAIAA4AAAAPAAAAAAAIAA8AAAAMAAAAAAAIABAAAAAMAAAAAAAIABEAAAAMAAAAAAAIABIAAAAMAAAAAAAIABMAAAAMAAAAAAAIABQAAAAMAAAAAAAJAA0AAAABAAgAAAAJAA4AAAAMAAAAAAAJAA8AAAANAAAAAAAJABAAAAANAAAAAAAJABEAAAANAAAAAAAJABIAAAANAAAAAAAJABMAAAANAAAAAAAJABQAAAANAAAAAAAKAA0AAAACAAgAAAAKAA4AAAANAAAAAAAKAA8AAAAOAAAAAAAKABAAAAAOAAAAAAAKABEAAAAOAAAAAAAKABIAAAAOAAAAAAAKABMAAAAOAAAAAAAKABQAAAAOAAAAAAALAA0AAAADAAgAAAALAA4AAAAOAAAAAAALAA8AAAAPAAAAAAALABAAAAAPAAAAAAALABEAAAAPAAAAAAALABIAAAAPAAAAAAAMAA0AAAAEAAgAAAAMAA4AAAAPAAAAAAAMAA8AAAAMAAAAAAAMABAAAAAMAAAAAAAMABEAAAAMAAAAAAAMABIAAAAMAAAAAAANAA0AAAABAAgAAAANAA4AAAAMAAAAAAANAA8AAAANAAAAAAANABAAAAANAAAAAAANABEAAAANAAAAAAANABIAAAANAAAAAAAOAA0AAAACAAgAAAAOAA4AAAANAAAAAAAOAA8AAAAOAAAAAAAOABAAAAAOAAAAAAAOABEAAAAOAAAAAAAOABIAAAAOAAAAAAAPAA0AAAAEAAgAAAAPAA4AAAAPAAAAAAAPAA8AAAAPAAAAAAAPABAAAAAPAAAAAAAPABEAAAAPAAAAAAAPABIAAAAPAAAAAAAQAA0AAAABAAgAAAAQAA4AAAAMAAAAAAAQAA8AAAAMAAAAAAAQABAAAAAMAAAAAAAQABEAAAAMAAAAAAAQABIAAAAMAAAAAAARAA0AAAACAAgAAAARAA4AAAANAAAAAAARAA8AAAANAAAAAAARABAAAAANAAAAAAARABEAAAANAAAAAAARABIAAAANAAAAAAASAA0AAAADAAgAAAASAA4AAAAOAAAAAAASAA8AAAAOAAAAAAASABAAAAAOAAAAAAASABEAAAAOAAAAAAASABIAAAAOAAAAAAATAA0AAAAEAAgAAAATAA4AAAAPAAAAAAATAA8AAAAPAAAAAAATABAAAAAPAAAAAAATABEAAAAPAAAAAAATABIAAAAPAAAAAAAUAA0AAAABAAgAAAAUAA4AAAAMAAAAAAAUAA8AAAAMAAAAAAAUABAAAAAMAAAAAAAUABEAAAAMAAAAAAAUABIAAAAMAAAAAAAVAA0AAAACAAgAAAAVAA4AAAANAAAAAAAVAA8AAAANAAAAAAAVABAAAAANAAAAAAAVABEAAAANAAAAAAAVABIAAAANAAAAAAAWAA0AAAADAAgAAAAWAA4AAAAOAAAAAAAWAA8AAAAOAAAAAAAWABAAAAAOAAAAAAAWABEAAAAOAAAAAAAWABIAAAAOAAAAAAAXAA0AAAAEAAgAAAAXAA4AAAAPAAAAAAAXAA8AAAAPAAAAAAAXABAAAAAPAAAAAAAXABEAAAAPAAAAAAAXABIAAAAPAAAAAAAYAA0AAAABAAgAAAAYAA4AAAAMAAAAAAAYAA8AAAAMAAAAAAAYABAAAAAMAAAAAAAYABEAAAAMAAAAAAAYABIAAAAMAAAAAAAZAA0AAAACAAgAAAAZAA4AAAANAAAAAAAZAA8AAAANAAAAAAAZABAAAAANAAAAAAAZABEAAAANAAAAAAAZABIAAAANAAAAAAAaAA0AAAADAAgAAAAaAA4AAAAOAAAAAAAaAA8AAAAOAAAAAAAaABAAAAAOAAAAAAAaABEAAAAOAAAAAAAaABIAAAAOAAAAAAAbAA0AAAAEAAgAAAAbAA4AAAAPAAAAAAAbAA8AAAAPAAAAAAAbABAAAAAPAAAAAAAbABEAAAAPAAAAAAAbABIAAAAPAAAAAAAcAA0AAAABAAgAAAAcAA4AAAAMAAAAAAAcAA8AAAAMAAAAAAAcABAAAAAMAAAAAAAcABEAAAAMAAAAAAAcABIAAAAMAAAAAAAdAA0AAAACAAgAAAAdAA4AAAANAAAAAAAdAA8AAAANAAAAAAAdABAAAAANAAAAAAAdABEAAAANAAAAAAAdABIAAAANAAAAAAAeAA0AAAADAAgAAAAeAA4AAAAOAAAAAAAeAA8AAAAOAAAAAAAeABAAAAAOAAAAAAAeABEAAAAOAAAAAAAeABIAAAAOAAAAAAAfAA0AAAAEAAgAAAAfAA4AAAAPAAAAAAAfAA8AAAAPAAAAAAAfABAAAAAPAAAAAAAfABEAAAAPAAAAAAAfABIAAAAPAAAAAAAgAA0AAAABAAgAAAAgAA4AAAAMAAAAAAAgAA8AAAAMAAAAAAAgABAAAAAMAAAAAAAgABEAAAAMAAAAAAAgABIAAAAMAAAAAAAhAA0AAAACAAgAAAAhAA4AAAANAAAAAAAhAA8AAAANAAAAAAAhABAAAAANAAAAAAAhABEAAAANAAAAAAAhABIAAAANAAAAAAAiAA0AAAADAAgAAAAiAA4AAAAOAAAAAAAiAA8AAAAOAAAAAAAiABAAAAAOAAAAAAAiABEAAAAOAAAAAAAiABIAAAAOAAAAAAAjAA0AAAAEAAgAAAAjAA4AAAAPAAAAAAAjAA8AAAAPAAAAAAAjABAAAAAPAAAAAAAjABEAAAAPAAAAAAAjABIAAAAPAAAAAAAkAA0AAAABAAgAAAAkAA4AAAAMAAAAAAAkAA8AAAAMAAAAAAAkABAAAAAMAAAAAAAkABEAAAAMAAAAAAAkABIAAAAMAAAAAAAlAA0AAAACAAgAAAAlAA4AAAANAAAAAAAlAA8AAAANAAAAAAAlABAAAAANAAAAAAAlABEAAAANAAAAAAAlABIAAAANAAAAAAAmAA0AAAADAAgAAAAmAA4AAAAOAAAAAAAmAA8AAAAOAAAAAAAmABAAAAAOAAAAAAAmABEAAAAOAAAAAAAmABIAAAAOAAAAAAAnAA0AAAAEAAgAAAAnAA4AAAAPAAAAAAAnAA8AAAAPAAAAAAAnABAAAAAPAAAAAAAnABEAAAAPAAAAAAAnABIAAAAPAAAAAAAoAA0AAAABAAgAAAAoAA4AAAAMAAAAAAAoAA8AAAAMAAAAAAAoABAAAAAMAAAAAAAoABEAAAAMAAAAAAAoABIAAAAMAAAAAAApAA0AAAACAAgAAAApAA4AAAANAAAAAAApAA8AAAANAAAAAAApABAAAAANAAAAAAApABEAAAANAAAAAAApABIAAAANAAAAAAAqAA0AAAADAAgAAAAqAA4AAAAOAAAAAAAqAA8AAAAOAAAAAAAqABAAAAAOAAAAAAAqABEAAAAOAAAAAAAqABIAAAAOAAAAAAArAA0AAAAEAAgAAAArAA4AAAAPAAAAAAArAA8AAAAPAAAAAAArABAAAAAPAAAAAAArABEAAAAPAAAAAAArABIAAAAPAAAAAAAEAAMAAAACAAIAAAAEAAQAAAACAAMAAAAFAAMAAAADAAIAAAAFAAQAAAADAAMAAAAEAAUAAAACAAIAAAAEAAYAAAACAAMAAAAFAAUAAAADAAIAAAAFAAYAAAADAAMAAAAEAAcAAAACAAIAAAAEAAgAAAACAAMAAAAFAAcAAAADAAIAAAAFAAgAAAADAAMAAAAEAAkAAAACAAIAAAAEAAoAAAACAAMAAAAFAAkAAAADAAIAAAAFAAoAAAADAAMAAAAEAAsAAAACAAIAAAAEAAwAAAACAAMAAAAFAAsAAAADAAIAAAAFAAwAAAADAAMAAAAGAAMAAAACAAIAAAAGAAQAAAACAAMAAAAHAAMAAAADAAIAAAAHAAQAAAADAAMAAAAGAAUAAAACAAIAAAAGAAYAAAACAAMAAAAHAAUAAAADAAIAAAAHAAYAAAADAAMAAAAGAAcAAAACAAIAAAAGAAgAAAACAAMAAAAHAAcAAAADAAIAAAAHAAgAAAADAAMAAAAGAAkAAAACAAIAAAAGAAoAAAACAAMAAAAHAAkAAAADAAIAAAAHAAoAAAADAAMAAAAGAAsAAAACAAIAAAAGAAwAAAACAAMAAAAHAAsAAAADAAIAAAAHAAwAAAADAAMAAAAIAAMAAAACAAIAAAAIAAQAAAACAAMAAAAIAAUAAAACAAIAAAAIAAYAAAACAAMAAAAIAAcAAAACAAIAAAAIAAgAAAACAAMAAAAIAAkAAAACAAIAAAAIAAoAAAACAAMAAAAIAAsAAAACAAIAAAAIAAwAAAACAAMAAAApAAQAAAACAAIAAAApAAUAAAACAAMAAAAqAAQAAAADAAIAAAAqAAUAAAADAAMAAAApAAYAAAACAAIAAAApAAcAAAACAAMAAAAqAAYAAAADAAIAAAAqAAcAAAADAAMAAAApAAgAAAACAAIAAAApAAkAAAACAAMAAAAqAAgAAAADAAIAAAAqAAkAAAADAAMAAAApAAoAAAACAAIAAAApAAsAAAACAAMAAAAqAAoAAAADAAIAAAAqAAsAAAADAAMAAAApAAwAAAACAAIAAAAqAAwAAAADAAIAAAArAAQAAAACAAIAAAArAAUAAAACAAMAAAAsAAQAAAADAAIAAAAsAAUAAAADAAMAAAArAAYAAAACAAIAAAArAAcAAAACAAMAAAAsAAYAAAADAAIAAAAsAAcAAAADAAMAAAArAAgAAAACAAIAAAArAAkAAAACAAMAAAAsAAgAAAADAAIAAAAsAAkAAAADAAMAAAArAAoAAAACAAIAAAArAAsAAAACAAMAAAAsAAoAAAADAAIAAAAsAAsAAAADAAMAAAArAAwAAAACAAIAAAAsAAwAAAADAAIAAAA=")
tile_set = SubResource("TileSet_6vsw4")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
position = Vector2(-385, -125)
rotation = 0.0752455
scale = Vector2(1.2, 1.2)
tile_set = SubResource("TileSet_1i7xs")

[node name="Sprite2D" type="Sprite2D" parent="TileMapLayer2"]
position = Vector2(432, 573.348)
scale = Vector2(2.5, 2.723)
texture = ExtResource("3_25xok")
region_enabled = true
region_rect = Rect2(0.799896, -6.47531, 32.819, 70.0988)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TileMapLayer2"]
position = Vector2(430, 476.848)
scale = Vector2(2.5, 2.723)
sprite_frames = SubResource("SpriteFrames_06l3d")
animation = &"palma"
frame_progress = 0.0429163

[node name="TileMapLayer4" type="TileMapLayer" parent="."]
position = Vector2(224, 533)
rotation = 0.0752455
scale = Vector2(1.2, 1.2)
tile_set = SubResource("TileSet_1i7xs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TileMapLayer4"]
position = Vector2(-17.8429, 7.19503)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_e0fjb")
frame_progress = 0.490167

[node name="TileMapLayer6" type="TileMapLayer" parent="."]
position = Vector2(1046, 547)
rotation = -0.0373277
tile_set = SubResource("TileSet_1i7xs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TileMapLayer6"]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_e0fjb")
frame_progress = 0.846642

[node name="TileMapLayer5" type="TileMapLayer" parent="."]
position = Vector2(284, 522)
rotation = 0.0752455
scale = Vector2(1.5, 1.5)
tile_set = SubResource("TileSet_1i7xs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TileMapLayer5"]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_e0fjb")
frame_progress = 0.325387

[node name="TileMapLayer7" type="TileMapLayer" parent="."]
position = Vector2(1184, 519)
rotation = 0.0752455
scale = Vector2(1.7, 1.7)
tile_set = SubResource("TileSet_1i7xs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TileMapLayer7"]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_e0fjb")
frame_progress = 0.325387

[node name="TileMapLayer3" type="TileMapLayer" parent="."]
position = Vector2(600, -130)
rotation = -0.00435594
scale = Vector2(1.2, 1.2)
tile_set = SubResource("TileSet_1i7xs")

[node name="Sprite2D" type="Sprite2D" parent="TileMapLayer3"]
position = Vector2(432, 573.348)
scale = Vector2(2.5, 2.723)
texture = ExtResource("3_25xok")
region_enabled = true
region_rect = Rect2(0.799896, -6.47531, 32.819, 70.0988)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TileMapLayer3"]
position = Vector2(430, 476.848)
scale = Vector2(2.5, 2.723)
sprite_frames = SubResource("SpriteFrames_06l3d")
animation = &"palma"
frame_progress = 0.31858
